changing multi user join behavior

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <div id="game" class="screen hidden">
             <p class="game-reminder">Match guesses = both lose. Each round's guesses will be revealed when both players have submitted.</p>
 
+            <div id="room-code-display" class="room-code-display hidden">
+                <p>Room Code: <strong id="room-code-text"></strong></p>
+            </div>
+
+            <div id="waiting-message" class="waiting-message hidden">
+                <p>⏳ Waiting for opponent to join!</p>
+                <p class="waiting-subtext">Share the room code above</p>
+            </div>
+
             <div class="header">
                 <span id="round">Round 1/6</span>
             </div>
