adding language to clarify win condition

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="menu" class="screen">
             <h1>WORDLE DUEL</h1>
             <p class="intro">Two players. Same target word.<br>Matching guess words = instant death.</p>
-            <p class="intro-detail">Guess the 5-letter word before your opponent. Standard Wordle rules apply, but if both players submit the same word in any round, both lose immediately.</p>
+            <p class="intro-detail">Guess the 5-letter word before your opponent. Standard Wordle rules apply, but if both players submit the same word in any round, both lose immediately. First player to guess the target word wins.</p>
             <button onclick="playAI()">Play vs AI</button>
             <button onclick="createRoom()">Create Room</button>
             <input id="roomCode" placeholder="Room code" maxlength="6">
